# rafsine

./: .clang-format  .cuda-gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  CudaGraphicsResource.cpp  CudaGraphicsResource.hpp  CudaTextureRectangle.cpp  CudaTextureRectangle.hpp  DataTable.hpp  Doxyfile  Doxyfile.in  GLWindow.cpp  GLWindow.hpp  GitSHA1.cpp.in  MainMenu.cpp  MainMenu.hpp  README.md  ResizeBar.cpp  ResizeBar.hpp  TreeView.hpp  application.qrc  format.sh  gpu_srv_deviceinfo.txt  gpu_srv_install.sh  gpu_srv_p2p_bandwidth.txt  main-bak.cpp  main-osgtex-test.cpp  main-test.cpp  main.cpp  main.hpp  osgtest.cpp  python_lbm_test.py  qtmain.cpp  rafsine.ipynb  rafsine.py  res.qrc  todo
assets/: AUTHORS  axis.blend  axis.mtl  axis.stl
cmake-modules/: FindLuaJIT51.cmake
cuda/: CudaGraphicsResource.cpp  CudaTexture2D.cpp  CudaTexture2D.hpp  CudaTextureSubloadCallback.cpp  CudaTextureSubloadCallback.hpp  CudaTexturedQuadGeometry.cpp  CudaTexturedQuadGeometry.hpp
geo/: ColorSet.hpp  CudaUtils.hpp  Primitives.hpp  UnitConverter.hpp  Voxel.cpp  Voxel.hpp  VoxelGeometry.cpp  VoxelGeometry.hpp  VoxelMesh.cpp  VoxelMesh.hpp
gui/: CFDScene.cpp  CFDScene.hpp  CFDWidget.cpp  CFDWidget.hpp  CudaGraphicsResource.hpp  CudaTexture2D.cpp  DataTable.cpp  DataTable.hpp  GLWindow.cpp  GLWindow.hpp  MainMenu.cpp  MainMenu.hpp  MainWindow.cpp  MainWindow.hpp  PickHandler.cpp  PickHandler.hpp  QtOSGWidget.cpp  QtOSGWidget.hpp  ResizeBar.cpp  ResizeBar.hpp  SliceRender.cpp  SliceRender.hpp  SliceRenderOld.cpp  SliceRenderOld.hpp  StatusBar.cpp  StatusBar.hpp  TreeView.cpp  TreeView.hpp
include/: Average.hpp  AverageObserver.hpp  AverageOutputTableView.hpp  AveragingTimerCallback.hpp  AxesMesh.hpp  BCInputTableView.hpp  BasicTimer.hpp  BillboardText.hpp  BoundaryCondition.hpp  BoundaryConditionTimerCallback.hpp  CFDHud.hpp  CFDScene.hpp  CFDSceneText.hpp  CFDTableView.hpp  CFDTreeWidget.hpp  CFDWidget.hpp  ColorSet.hpp  ComputeKernelParams.hpp  ConsoleClient.hpp  CudaGraphicsResource.hpp  CudaMathHelper.h  CudaTexture2D.hpp  CudaTextureSubloadCallback.hpp  CudaTexturedQuadGeometry.hpp  CudaUtils.hpp  DFGroup.hpp  DF_array_GPU.hpp  DdQq.hpp  DdQqIndexing.hpp  DistributedDFGroup.hpp  DistributedLattice.hpp  DistributionArray.hpp  DistributionArrayImpl.hpp  DistributionFunction.hpp  DistributionFunctionImpl.hpp  DistributionFunctionsGroup.hpp  DomainData.hpp  ErrorFormat.hpp  GatherKernel.hpp  HistogramMesh.hpp  (+64 more)
lua/: BoundaryConditions.lua  CascadedLBM_D2Q9_MRTform.lua  CascadedLBM_D3Q27.lua  FileWriter.lua  InitialisationMethods.lua  KernelGenerator.lua  MRTDHumieresD3Q15_2002.lua  MRTLallemand2000.lua  MainGenerator.lua  MemoryManager.lua  ModelParameters.lua  Moment.lua  NodeD3Q6.lua  NodeDescriptor.lua  NodeDescriptorD3Q15.lua  OldUnitConverter.lua  OldVoxelGeometry.lua  OpenGLRenderGenerator.lua  SavingGenerator.lua  ThreadLayout.lua  UnitConverter.lua  VoxelGeometry.lua  buildGeometry.lua  extractSubset.lua  operators.lua  settings.lua  unitConverter.lua
lua/legacy/: CascadedLBM_D2Q9.lua  DocumentationGenerator.lua  DynamicsGenerator.lua  EarlyExitGenerator.lua  MRTDellar2002.lua  NodeDescriptorD2Q9.lua  NodeDescriptorD3Q19.lua  NodeDescriptorD3Q27.lua  SmagorinskyDynamics.lua  StatisticsGenerator.lua  TRT.lua  WaitGenerator.lua  generator.lua  helpers.lua  matrix.lua  merge.lua
problems/boussinesq/: boussinesq.lbm  geometry.lua  settings.lua
problems/data_center/: buildGeometry.lua  data_center.lbm  description.txt  geometry.lua  input.csv  output.csv  project.lbm  settings.lua
problems/fan_chamber/: geometry.lua  project.lbm  settings.lua
problems/hospital/: buildGeometry.lua  description.txt  geometry.lua  hospital.lbm  settings.lua
problems/jet_chamber/: geometry.lua  jet_chamber.lbm  settings.lua
problems/lid_driven_cavity/: geometry.lua  lid_driven_cavity.lbm  project.lbm  settings.lua
problems/ocp/: generate_input.ipynb  geometry.lua  grafana_csv_formatter.ipynb  ocp.lbm  output.csv  plot_output.ipynb  pod2.blend  project.lbm  settings.lua
problems/pod2/: generate_input.ipynb  geometry.lua  output.csv  pod2.lbm  settings.lua
problems/pod3/: geometry.lua  pod3.lbm  settings.lua
problems/simple/: geometry.lua  settings.lua  simple.lbm
problems/sphere_chamber/: geometry.lua  project.lbm  settings.lua
problems/stl_test/: cold_crac_3.stl  cold_crac_4.stl  cold_rack_10a.stl  cold_rack_10b.stl  cold_rack_11b.stl  cold_rack_11d.stl  cold_rack_12c.stl  cold_rack_12d.stl  cold_rack_1c.stl  cold_rack_1d.stl  cold_rack_2a.stl  cold_rack_2b.stl  cold_rack_2d.stl  cold_rack_3a.stl  cold_rack_3c.stl  cold_rack_4c.stl  (+43 more)
python/: PythonClient.cpp  __init__.py  lattice_size.ipynb  lbm-double-mrt-les-boussinesq.py  mrt_d3q19_generator.ipynb  mrt_d3q19_test.ipynb  mrt_kernel_generator.ipynb  mrt_kernel_generator.py  mrt_test.ipynb  simulation.py  tau_test.ipynb
sim/: BoundaryCondition.cpp  BoundaryCondition.hpp  KernelData.cpp  KernelData.hpp  SimConstants.hpp  UnitConverter.hpp  UserConstants.hpp
tests/: demo_partition.cpp  demo_sublattice.cpp  demo_topology.cpp  demo_voxelarea.cpp  demo_voxelization.cpp  demo_voxelmesh.cpp  demo_voxelsphere.cpp  test_basic.cpp  test_cuda.cpp  test_cuda.hpp  test_darray1.cpp  test_darray2.cpp  test_ddqq.cpp  test_dfs.cpp  test_distarray.cpp  test_distributionarray.cpp  test_kernel.cpp  test_kernel.hpp  test_lbm_eq.cpp  test_main.cpp  test_sublattice.cpp  test_topology.cpp
thesis/: csee_msc_example.tex  csee_msc_thesis.cls  english.ldf  glossary.tex  plots.tex  presentation.tex  presentation2.tex  schematic.tex  swedish.ldf  thesisreferences.bib
tools/: build.sh  code_printer.py  ddqq.py  lbm-double-mrt-les-boussinesq.py  lbm_d3q27_clbm.py  lbm_d3q27_mrt.py  lbm_d3q27_mrt2.py  lbm_double_bgk_les_boussinesq.py  lbm_double_mrt_les_boussinesq.py  lbm_gen_d3q19_bgk.py  lbm_gen_d3q19_mrt.py  lbm_gen_d3q27_clbm.m  lbm_gen_d3q27_clbm.py  lbm_gen_d3q27_mrt.py  lbm_gen_ddqq.py  lbm_gen_ddqq_idx.py  lbm_gen_double_bgk_les_boussinesq.py  lbm_gen_double_mrt_les_boussinesq.py  lbm_gen_init.py  lbm_init.py  tau_test.ipynb
(+601 files in other folders)
